# Stroke-Prediction-ML

backend/: .dockerignore  Dockerfile  ml_api_stroke.py  model_features.pkl  requirements.txt  sample_test_cases.json  stroke_dataset.csv  train_stroke_prediction_model.py
backend/multi/: __init__.py  api.py  models.py  preprocessing.py  schemas.py
backend/reports/: classification_report.csv
sp/: package-lock.json  package.json
sp/src/: App.tsx
sp/src/pages/: MultiStrokePredict.css  MultiStrokePredict.tsx  Splash.tsx  StrokePredict.css  StrokePredict.tsx  StrokePredictIntro.css  StrokePredictIntro.tsx  splash.css
sp/src/types/: global.d.ts
worker/: ml_api_stroke.py  pyproject.toml  wrangler.toml
